<resources>
    <string name="app_name">CuentaDividida</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="listado">listado</string>
    <string name="agregar">Agregar</string>
    <string name="agregar_consumo">Agregar Consumo</string>
    <string name="nombre_item">Nombre Item</string>
    <string name="precio_item">Precio</string>
    <string name="cantidad_item">Cantidad</string>
    <string name="nombre_del_evento">Nombre del evento</string>
    <string name="agregar_evento">Agregar Evento</string>
    <string name="agregar_evento_boton">Agregar Evento</string>
</resources>